...
    <string name="text_select_course_for_question">Please Select a Course</string>
    <string name="error_when_download_question">An Error Occurred when Downloading the Question</string>
    <string name="chosen_course_for_question">Chosen Course : </string>
    <string name="edit_button_text">Edit</string>
    <string name="choose_course_for_question_text">Choose the Course that Corresponds to your Question</string>
    <string name="write_here_your_question_text">Write Here the Question</string>
    <string name="time_out_notification">A question has timed out, be quicker next time !</string>
    <string name="text_too_recent_API">The display of the schedule is not available yet for API greater than 27.</string>
    <string name="change_role_button_text">Change role</string>
    <string name="schedule_updated_confirmation">Course\'s schedule updated</string>
    <string name="course_choice_settings_button_teacher">Manage your courses</string>
    <string name="other_courses_text">Other courses</string>
    <string name="your_courses_text">Your courses</string>
...
    <string name="special_quest_creative_username_description">Set a creative username and earn a surprise item!</string>
    <string name="special_quest_consistent_use_title">Consistent Use</string>
    <string name="special_quest_consistent_use_description">Use StudyUp three days in a row and earn a surprise item!</string>
    <string name="your_special_quests">Your Special Quests</string>
    <string name="available_special_quests">Available Special Quests</string>
    <string name="enroll_button_text">Enroll</string>
    <string name="time_out_title">Time out !</string>
    <string name="question_duration_selection">Select the time duration</string>
    <string name="chosen_duration">"Time: "</string>
    <string name="duration">Duration</string>
    <string name="time_constraint_text">No time constraint</string>
    <string name="remaining_time">Time left:</string>
    <string name="elapsed_time">Elapsed time</string>
...
