<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".questions.DisplayQuestionActivity"
    tools:layout_editor_absoluteY="25dp">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back_button"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:background="@drawable/ic_arrow_back_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="?attr/colorPrimaryDark"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark">

            </android.support.v7.widget.Toolbar>

        </android.support.constraint.ConstraintLayout>


        <!--PHOTO SPACE-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:id="@+id/photo_space"
            android:layout_above="@+id/answer_space"
            android:layout_below="@+id/topBar"
            android:layout_marginBottom="-68dp">

            <TextView
                android:id="@+id/quest_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="top|center"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/question_display_view"
                android:layout_width="match_parent"
                android:layout_height="295dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="52dp"
                android:adjustViewBounds="true"
                android:gravity="top"
                android:maxHeight="350dp"
                android:src="@drawable/white_view"
                app:srcCompat="@android:color/transparent" />


        </RelativeLayout>



        <!--ANSWER SPACE-->

        <android.support.constraint.ConstraintLayout
            android:id="@+id/answer_space"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true">

            <RadioGroup
                android:id="@+id/answer_radio_group_top"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="8dp"
                android:checkedButton="@+id/answer1"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/answer1"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:tag="1"
                    android:text="@string/truth_value"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/answer2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:tag="2"
                    android:text="@string/false_value"
                    android:textAlignment="center" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/answer_radio_group_bot"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/answer_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_radio_group_top"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/answer3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:tag="3"
                    android:text="@string/text_answer_3"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/answer4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:tag="4"
                    android:text="@string/text_answer_4"
                    android:textAlignment="center"/>
            </RadioGroup>

            <Button
                android:id="@+id/answer_button"
                android:layout_width="92dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="answerQuestion"
                android:text="@string/answer_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_radio_group_top"
                app:layout_constraintVertical_bias="0.811" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>